# acls

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: db.rs  ide.rs  ir.rs  language.rs  lsp_server.rs  main.rs  source_edit.rs  syntax.rs  text_edit.rs
src/capabilities/: aliases.rs  mod.rs
tests/move_fns/: first.clj  something.rs
tests/normalize_namespaces/: second.clj  third.clj
