[package]
name = "another-clj-lsp"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
dashmap = "^5"
env_logger = "0.10.0"
glob = "^0.3"
im-rc = "15.1.0"
log = "^0.4"
mimalloc = "*"
nohash-hasher = "^0"
once_cell = "^1"
parking_lot = "^0.12"
ropey = "^1.6"
rustc-hash = "^1"
salsa = { version = "0.17.0-pre.2", features = [] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
text-size = "1.1.1"
tokio = { version = "^1", features = ["full"]}
tower-lsp = { version = "0.20", features = ["proposed"]}
tree-sitter = "0.20.10"

[build-dependencies]
cc = "1.0"